--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,11 @@ header{
     font-size:20px;
 }
 
+.navBar li a:hover{
+    font-family: verdana;
+    color: #222831;
+}
+
 .hamburger{
     display: none;
     cursor: pointer;
