--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,23 @@ header{
     cursor: pointer;
 }
 
+@media (max-width:1400px){
+    .card{
+        margin-left: 130px;
+        max-width: 1120px;
+    }
+
+    .btn-group{
+        padding-top: 2%;
+        margin-left: 130px ;
+    }
+    
+    .search{
+        padding-top: 10%;
+        margin-left: 130px;
+    }    
+}
+
 @media (max-width:1070px){
     .nav{
         /* position:fixed; */
@@ -85,14 +102,48 @@ header{
 
     }
 
+    .div-container .hero-text{
+        margin-left:80px;
+    }
+
 
     .div-container .hero-description{
         margin-top:80px; 
+        margin-left: 100px;
         padding: 10px 0 25px;
 
     }
 
+    .btn{
+        margin-left:80px;
+    }
+
+    .card{
+        margin-left: 70px;
+        max-width: 850px;
+    }
+
+    .btn-group{
+        padding-top: 2%;
+        margin-left: 70px ;
+    }
+    
+    .search{
+        padding-top: 10%;
+        margin-left: 70px;
+    }
+
+    .fluid-layout h1{
+        margin-top:150px;
+        margin-right: 1200px;
+        position:relative;
+    }
+
+    .fluid-layout .descripcion-entrada{
+        margin-right:800px;
+    }
 }
+
 
 @media (max-width: 840px){
 
@@ -367,5 +418,3 @@ header{
     margin-top:40px;
 
 }
-
-
